# remeres-map-editor-redux

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_clang.sh  build_windows.bat  conanfile.py  config.toml  prompt.md  qt_jules.md  setup_conan.sh  vcpkg.json
.claude/commands/: convert-bt-api.md  redux-commit.md  redux-execute.md  redux-review.md  redux.md
.github/workflows/: build.yml  claude-code-review.yml
.jules/: profiler.md
.redux/: workflow.md
.redux/agents/: executor.md  planner.md  reviewer.md
.redux/docs/: action-system.md  architecture.md  border-system.md  brush-system.md  data-formats.md  ui-patterns.md
.redux/plans/: 01_New_Map_Dialog.md  03_Line_Tool.md  04_Rotate_Selection.md  05_Border_Scan_Tool.md
.redux/reviews/: 01_Review_New_Map_Dialog.md  02_Review_Dungeon_Generator.md  03_Review_Line_Tool.md  04_Review_Rotate_Selection.md
app/: main.h
data/: clients.toml  menubar.xml
data/1098/: borders.xml  doodads.xml  (+7 more)
reports/: opengl_report.md
rme_qt6/: CMakeLists.txt
rme_qt6/source/: main.cpp
rme_qt6/source/app/: application.cpp  application.h  definitions.h  main.h  rme_forward_declarations.h  threads.h
rme_qt6/source/ext/nanovg/: README.md  premake4.lua
rme_qt6/source/ext/nanovg/.github/workflows/: ci.yml
rme_qt6/source/ext/nanovg/obsolete/: nanovg_gl2.h  nanovg_gl3.h
rme_qt6/source/ext/nanovg/src/: stb_truetype.h
rme_qt6/source/ui/: main_window.cpp  main_window.h
rme_qt6/source/util/: common.cpp  common.h
scripts/: README.md  terrain_generator_demo.lua
source/: CMakeLists.txt  test_rendering_optimization.cpp
triplets/: x64-windows.cmake
(+463 files in other folders)
